<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.ngedev.newsapplication.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.ngedev.newsapplication.ui.favorite.FavoriteFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_discover" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ngedev.newsapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>