<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">


    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/button_arrow_back"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="RedundantDescriptionCheck" />


    <ImageButton
        android:id="@+id/buttonBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/cd_button_bookmark"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_bookmark_border_24"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/buttonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/cd_button_share"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonBookmark"
        app:layout_constraintTop_toTopOf="@+id/buttonBookmark"
        app:srcCompat="@drawable/ic_baseline_share_24"
        tools:ignore="RedundantDescriptionCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBack">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/cd_author_image"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintStart_toStartOf="@+id/detailArticleImage"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/detailArticleImage"
                android:layout_width="0dp"
                android:layout_height="212dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cd_image_article"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailArticleTitle"
                app:srcCompat="@drawable/dummy_image"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/detailArticleDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_article_description"
                app:layout_constraintEnd_toEndOf="@+id/detailArticleImage"
                app:layout_constraintStart_toStartOf="@+id/detailArticleImage"
                app:layout_constraintTop_toBottomOf="@+id/detailArticleImage" />

            <TextView
                android:id="@+id/detailArticleTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/dummy_article_title"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:autoSizePresetSizes="@array/autosizeTextSizes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/detailArticleImage"
                app:layout_constraintTop_toBottomOf="@+id/detailArticleDescription" />

            <TextView
                android:id="@+id/detailArticleAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_article_author"
                app:layout_constraintStart_toEndOf="@+id/imageButton7"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/dotSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dot_symbol"
                app:layout_constraintStart_toEndOf="@+id/detailArticleAuthor"
                app:layout_constraintTop_toTopOf="@+id/detailArticleAuthor" />

            <TextView
                android:id="@+id/detailArticleDatePublished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/dummy_article_date"
                app:layout_constraintStart_toEndOf="@+id/imageButton6"
                app:layout_constraintTop_toTopOf="@+id/dotSymbol" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/detailArticleImage"
                app:layout_constraintTop_toBottomOf="@+id/detailArticleAuthor" />

            <TextView
                android:id="@+id/detailArticleContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_article_content"
                app:layout_constraintEnd_toEndOf="@+id/detailArticleImage"
                app:layout_constraintStart_toStartOf="@+id/detailArticleImage"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/cd_publish_date"
                app:layout_constraintBottom_toBottomOf="@+id/dotSymbol"
                app:layout_constraintStart_toEndOf="@+id/dotSymbol"
                app:layout_constraintTop_toTopOf="@+id/dotSymbol"
                app:layout_constraintVertical_bias="0.6"
                app:srcCompat="@drawable/ic_baseline_calendar_today_24"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/buttonReadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/read_more"
                app:layout_constraintStart_toStartOf="@+id/detailArticleContent"
                app:layout_constraintTop_toBottomOf="@+id/detailArticleContent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>