<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/range_24"
        android:layout_marginTop="@dimen/range_16"
        android:text="@string/dialog_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/size_16" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/range_8"
        android:text="@string/dialog_description"

        android:textSize="@dimen/size_12"
        app:layout_constraintEnd_toEndOf="@+id/btn_accept"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        style="@style/ButtonStyle14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/range_16"
        android:layout_marginEnd="@dimen/range_24"
        android:layout_marginBottom="@dimen/range_16"
        android:text="@string/hapus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/ButtonStyleWhite14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_accept"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/range_16"
        android:layout_marginEnd="@dimen/range_24"
        android:layout_marginBottom="@dimen/range_16"
        android:text="@string/cancel_text" />

</androidx.constraintlayout.widget.ConstraintLayout>