<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/favoriteArticleImage"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dummy_image"
            android:contentDescription="@string/cd_image_article" />

        <TextView
            android:id="@+id/favoriteArticleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/dummy_article_title"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteArticleImage" />

        <TextView
            android:id="@+id/favoriteArticleAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/dummy_article_author"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonDelete"
            app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
            app:layout_constraintStart_toStartOf="@+id/favoriteArticleTitle"
            app:layout_constraintTop_toTopOf="@+id/buttonDelete" />
        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteArticleTitle"
            app:srcCompat="@drawable/ic_baseline_more_vert_24"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:contentDescription="@string/cd_image_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>